--- a/src/App.css
+++ b/src/App.css
@@ -113,6 +113,16 @@
   padding: 15px 70px;
   font-size: 0.8em;
   font-weight: 500;
+  cursor: pointer;
+  margin-right: 1rem;
+}
+
+.formFieldButton:hover{
+  background-color: transparent;
+  color: #03dac6;
+  border: 2px solid #03dac6;
+  margin-right: 2rem;
+  transition: 0.5s;
 }
 
 .formFieldLink {
@@ -121,7 +131,6 @@
   display: inline-block;
   border-bottom: 1.5px solid#03dac6;
   padding-bottom: 5px;
-  margin-left:2rem;
 }
 
 .formFieldCheckboxLabel {
