--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -2,7 +2,7 @@
 	width: 100vw;
 	overflow-x: hidden;
 	height: 100vh;
-	background: #121212;
+	background: #121926;
 	margin: 0;
 	padding: 0;
 }
@@ -12,9 +12,9 @@ nav {
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
-	color: #000000;
+	color: #fff;
 	padding: 0;
-	background-color: #03dac6;
+	background-color: #1a2332;
 	height: 4rem;
 }
 .home-logo {
@@ -27,77 +27,77 @@ nav {
 	display: flex;
 }
 .home-profilePic {
-    cursor: pointer;
-    padding: 2rem;
+	box-sizing: content-box;
+	cursor: pointer;
+	padding: 2rem;
 	width: 3rem;
 	height: 3rem;
 	border-radius: 50%;
 }
 .home-Poster-Holder {
 	margin: 1rem;
-    margin-top: 4rem;
+	margin-top: 4rem;
 	display: flex;
 	justify-content: center;
 	align-items: center;
 }
 .home-Poster {
 	border: 1px solid #03dac6;
-	-webkit-box-shadow: 18px 16px 43px -2px rgb(3, 218, 198,0.25);
-	-moz-box-shadow: 18px 16px 43px -2px rgb(3, 218, 198,0.25);
-	box-shadow: 18px 16px 43px -2px rgb(3, 218, 198,0.25);
+	-webkit-box-shadow: 18px 16px 43px -2px rgb(3, 218, 198, 0.25);
+	-moz-box-shadow: 18px 16px 43px -2px rgb(3, 218, 198, 0.25);
+	box-shadow: 18px 16px 43px -2px rgb(3, 218, 198, 0.25);
 	border-radius: 18px;
 	width: 75%;
 	height: 50vh;
 }
-.home-content{
-    display: flex;
-    flex-direction: column;
+.home-content {
+	display: flex;
+	flex-direction: column;
 }
-.home-display{
-    color: #fff;
-    margin-top: 4rem;
-    display: flex;
-    height: auto;
-    justify-content: center;
-    /* border: 2px solid white; */
+.home-display {
+	color: #fff;
+	margin-top: 4rem;
+	display: flex;
+	height: auto;
+	justify-content: center;
+	/* border: 2px solid white; */
 }
-.home-rectangle{
-    cursor: pointer;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-weight: bolder;
-    border: 2px solid gold;
-    width:  17%;
-    height: 3rem;
+.home-rectangle {
+	cursor: pointer;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	font-weight: bolder;
+	border: 2px solid gold;
+	width: 17%;
+	height: 3rem;
 }
-.home-rectangle:hover{
-    background: gold;
-    color: #000000;
+.active {
+	background: gold;
+	color: #000000;
 }
-.home-hr{
-    display: flex;
-    justify-content:space-around;
-    align-items: center;
-    font-weight: bold;
-    font-size: 18px;
-    color:#03dac6;
-    margin-top: 2rem;
-    margin-left: 25%;
-    width: 50%;
-    height: 4rem;
-    border-bottom: 2px solid gold;
-    /* border-top: 2px solid gold; */
+.home-hr {
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
+	font-weight: bold;
+	font-size: 18px;
+	color: #03dac6;
+	margin-top: 2rem;
+	margin-left: 25%;
+	width: 50%;
+	height: 4rem;
+	border-bottom: 2px solid gold;
+	/* border-top: 2px solid gold; */
 }
 
-
-.home-contests > div > .home-hr{
-    border-radius: 18px;
-    color: #fff;
-    border: 2px solid #03dac6;
+.home-contests > div > .home-hr {
+	border-radius: 18px;
+	color: #fff;
+	border: 2px solid #03dac6;
 }
-.home-hidden{
-    display: none;
+.home-hidden {
+	display: none;
 }
 
 @media (max-width: 768px) {
@@ -139,14 +139,14 @@ nav {
 
 	.home-Poster {
 		width: 95%;
-        height: 50%;
+		height: 50%;
 	}
 
 	.home-rectangle {
 		width: 40%;
 	}
-    .home-hr{
-        margin-left: 15%;
-        width: 70%;
-    }
+	.home-hr {
+		margin-left: 15%;
+		width: 70%;
+	}
 }
